@@ -6,6 +6,8 @@ Bugfixes.
    (Bug #505987, Alexander Belchenko)
  * Rollback changes to qadd made in 0.18.2 which caused regression.
    (Bug #526933, Alexander Belchenko)
+ * Handle FileTimestampUnavailable error when diffing file with ghosts
+   in history. (Bug #513096, Alexander Belchenko)
 
 
 0.18.2 "Cedar" - 2010/02/21
